Location in menu + add collapsing description

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -2,7 +2,7 @@
 This project is a static HTML website called BuoyBitcoin. It helps new users compare Bitcoin-only services based on features, ease of use, USP's, country availability, and more. It should be user friendly and easily navigatible. 
 
 # Personality
-Explain everything like a senior front-end developer would explain it to a beginner. Be patient and clear.
+Explain everything like a senior front-end developer would explain it to a beginner with no coding experience. Be patient and clear.
 
 # Tech Stack
 - Static HTML
@@ -12,11 +12,14 @@ Explain everything like a senior front-end developer would explain it to a begin
 
 # Processes
 
-## GitHub Push
-1. Make sure I'm on the correct branch.
-2. Stage all changes.
-3. Commit with a short and clear message.
-4. Push to GitHub.
+## GitHub Push Process
+1. Make sure I'm on the correct branch (`main`)
+2. Stage changes: `git add .`
+3. Commit: `git commit -m "Describe changes"`
+4. Push: `git push`
+
+Cursor, please follow this process when I ask you to push code to GitHub.
+
 
 ## Error Fixing
 1. Explain the error in simple terms.
@@ -28,6 +31,8 @@ Explain everything like a senior front-end developer would explain it to a begin
 
 # File Structure
 
+# Code implementation
+- Keep element id's and element classes that interact with each other or are part of the same structure, within the same vicinity when adding to the existing styles.css file. For example: .menu.active should be near .hamburger because .menu.active is part of the .hamburger container. 
 
 # Important Notes
 - Always comment code when possible.
