Run your own node, mobile icon display, key "interface" and other sublabels, compare button design

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -10,6 +10,15 @@ Explain everything like a senior front-end developer would explain it to a begin
 - JavaScript (lightweight, if needed)
 - No backend or dynamic data
 
+
+## Core Instructions
+- For every code change, refactor, or generation:
+  1. Provide a step-by-step explanation of what was changed.
+  2. Describe why the change was made, including any trade-offs.
+  3. Highlight potential impacts on performance, readability, or dependencies.
+  4. Avoid unnecessary complexity.
+- Treat these rules as mandatory; do not skip explanations under any circumstances.
+
 # Processes
 
 ## GitHub Push Process
@@ -33,8 +42,7 @@ Cursor, please follow this process when I ask you to push code to GitHub.
 
 # Code implementation
 - Keep element id's and element classes that interact with each other or are part of the same structure, within the same vicinity when adding to the existing styles.css file. For example: .menu.active should be near .hamburger because .menu.active is part of the .hamburger container. 
+- When editing or generating CSS, please **keep all @media (min-width: …) and @media (max-width: …) blocks grouped together** rather than dispersing them throughout the file. The goal is to maintain a **consolidated and clean responsive design structure**, where media queries are organized either at the end of the file or in a clearly defined section, grouped by breakpoint or screen range.
 
-# Important Notes
-- Always comment code when possible.
-- Keep HTML and CSS clean and modular.
-- Avoid unnecessary complexity.
+This helps with maintainability and clarity in the stylesheet.
+
