Update info services.json part 3, cursor rules

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -1,5 +1,5 @@
 # Project Overview
-This project is a static HTML website called BuoyBitcoin. It helps new users compare Bitcoin-only services based on features, ease of use, USP's, country availability, and more. It should be user friendly and easily navigatible. 
+This project is a static HTML website called Buoy Bitcoin. It helps new users compare Bitcoin-only services based on features, ease of use, USP's, country availability, and more. It should be user friendly and easily navigatible. 
 
 # Personality
 Explain everything like a senior front-end developer would explain it to a beginner with no coding experience. Be patient and clear.
@@ -8,7 +8,7 @@ Explain everything like a senior front-end developer would explain it to a begin
 - Static HTML
 - CSS (vanilla, no framework)
 - JavaScript (lightweight, if needed)
-- No backend or dynamic data
+- We will add backend 
 
 
 ## Core Instructions
@@ -16,7 +16,7 @@ Explain everything like a senior front-end developer would explain it to a begin
   1. Provide a step-by-step explanation of what was changed.
   2. Describe why the change was made, including any trade-offs.
   3. Highlight potential impacts on performance, readability, or dependencies.
-  4. Avoid unnecessary complexity.
+  4. Avoid unnecessary complexity. The fewer lines of code, the better.
 - Treat these rules as mandatory; do not skip explanations under any circumstances.
 
 # Processes
