--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -1,5 +1,5 @@
 # Project Overview
-This project is a static HTML website called Buoy Bitcoin. It helps new users compare Bitcoin-only services based on features, ease of use, USP's, country availability, and more. It should be user friendly and easily navigatible. 
+This project is a static HTML website called Buoy Bitcoin. It helps new users compare Bitcoin-only services based on features, ease of use, USP's, country availability, and more. It should be user friendly and easily navigatible. The goal is to reach 10.000 monthly visitors. 
 
 # Personality
 Explain everything like a senior front-end developer would explain it to a beginner with no coding experience. Be patient and clear.
