SEO: index.html increase amount words

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -1,48 +1,127 @@
-# Project Overview
-This project is a static HTML website called Buoy Bitcoin. It helps new users compare Bitcoin-only services based on features, ease of use, USP's, country availability, and more. It should be user friendly and easily navigatible. The goal is to reach 10.000 monthly visitors. 
+# Cursor Rules — Buoy Bitcoin
 
-# Personality
-Explain everything like a senior front-end developer would explain it to a beginner with no coding experience. Be patient and clear.
+> Keep this concise, actionable, and stable so AI can code confidently.
 
-# Tech Stack
-- Static HTML
-- CSS (vanilla, no framework)
-- JavaScript (lightweight, if needed)
-- We will add backend 
+## Project Overview
 
+* **Name:** Buoy Bitcoin — static HTML site that helps newcomers **compare Bitcoin-only services** by features, ease of use, USP, country availability, custody model, and Lightning support.
+* **Outcome Goal:** **10,000 monthly visitors** (validate demand for curated, Bitcoin-only directories + guides).
 
-## Core Instructions
-- For every code change, refactor, or generation:
-  1. Provide a step-by-step explanation of what was changed.
-  2. Describe why the change was made, including any trade-offs.
-  3. Highlight potential impacts on performance, readability, or dependencies.
-  4. Avoid unnecessary complexity. The fewer lines of code, the better.
-- Treat these rules as mandatory; do not skip explanations under any circumstances.
+## Vision & Mission
 
-# Processes
+* **Vision:** A neutral, Bitcoin-only discovery layer that reduces choice overload and nudges users toward self-sovereignty—built with the optimistic, deflationary future Jeff Booth describes.
+* **Mission:** Make it effortless for newcomers and time-poor builders to find reliable Bitcoin services that fit their jurisdiction, experience level, and use-case—without overwhelming them.
 
-## GitHub Push Process
-1. Make sure I'm on the correct branch (`main`)
-2. Stage changes: `git add .`
+## Personality (tone for all explanations)
+
+Explain like a **senior front‑end dev** guiding a **complete beginner**: patient, clear, minimal jargon, concrete steps.
+
+## Tech Stack (now) & Infra
+
+* **Frontend:** Static HTML, vanilla CSS, lightweight JavaScript.
+* **Infra:** DreamHost (static hosting). DigitalOcean LAMP droplet available (backend).
+* **Telemetry:** Umami (privacy‑friendly). Feedback Fish (user feedback).
+
+## Stage, Team
+
+* **Stage:** Pre‑MVP → MVP.
+* **Team:** Solo.
+
+## Business Model (ethos‑aligned)
+
+* **Value‑for‑Value (V4V):** Lightning/On‑chain tips (visible in header/footer + service pages).
+* **Transparent affiliates** (possibly in the future), clearly labeled, never changing rankings.
+* **No paywalls. No altcoins. Minimal tracking (Umami only).**
+
+## Non‑Negotiables (constraints for AI)
+
+* **Bitcoin‑only**. Do not introduce or recommend altcoins.
+* **No heavy frameworks**; keep JS minimal; ship fast pages.
+* **Performance:** avoid bloated libs; compress images; defer non‑critical JS.
+
+## Repository Facts the AI Can Rely On
+
+* Pages: `index.html`, `about.html`, `compare.html`, `faq.html`, `service.html`.
+* Guides: `faq.html`, `about.html`, `what-is-bitcoin.html`, `what-is-lightning.html`.
+* Assets: `styles.css`, `script.js`, `compare.js`, `questionnaire.js`.
+* Data: `services.json` (catalog), `countries.json` (ISO codes + regions).
+
+## Data Model & Behavior
+
+* **`services.json` schema (keep stable):**
+
+  * `name`, `category` (Buy | Spend | Store | Merchant | Node), `description`, `website`.
+  * `countries` (ISO codes and/or regions like `WW`, `EU`, etc.).
+  * `custody_model` (non‑custodial / collaborative / custodial).
+  * `platform_availability` (web, iOS, Android, desktop).
+  * `features` grouped by region code; each item: `{ text, status: positive|negative|neutral }`.
+  * Optional: ratings, KYC requirements, Lightning support, fees (when known).
+* **Country/Region filtering:** use `countries.json` and region mappings; honor `WW`.
+* **Compare rules:**
+
+  * Compare **only within the same category**.
+  * **Mobile:** max 2 services; **Desktop:** max 3 services.
+  * Side‑by‑side shows description, custody, platforms, notable features (per region), links.
+* **Questionnaire:** lightweight; maps answers (e.g., KYC preference, Lightning, experience) to filters → deep‑link to `compare.html?category=...&services=...`.
+
+## Code Style & CSS Rules
+
+* Keep related selectors close: elements (IDs/classes) that interact or are part of one component should **live together** (e.g., `.hamburger`, `.menu`, `.menu.active`).
+* **Media queries grouping:** keep **all** `@media (min-width: …)` and `@media (max-width: …)` blocks **consolidated** in a clearly marked section (prefer end of file), grouped by breakpoint.
+* Prefer utility‑like, low‑specificity selectors; avoid deep nesting and `!important`.
+* Keep HTML semantic; use aria labels where needed.
+
+## Coding Directives (AI)
+
+* Work in **vanilla HTML/CSS/JS**. Avoid frameworks unless explicitly requested.
+* Extend `services.json` **without breaking the schema**. Validate required fields.
+* Keep `regionMappings` and country lists in sync when editing geography.
+* Maintain compare limits and same‑category checks (2 mobile / 3 desktop).
+
+## Core Instructions (MANDATORY for any code change/refactor/generation)
+
+1. Provide a **step‑by‑step explanation** of what changed.
+2. Describe **why** it was changed, including trade‑offs.
+3. Highlight **impacts** on performance, readability, or dependencies.
+4. **Avoid unnecessary complexity.** Fewer lines > more lines.
+
+## Design (minimal, Buoy palette)
+* Tokens:
+:root{
+  --accent:#ff603b; --accent-hover:#e55a35;
+  --text:#000; --muted:#666;
+  --bg:#f5f5f5; --surface:#fff; --line:#ddd;
+  --font-sans:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+  --radius:8px; --container:1200px;
+}
+
+* Classes to reuse
+`header`, `hero`, `btn` (btn-primary,btn-ghost), `card`, `compare-table`
+
+* Rules
+Light, clean UI; orange accents only; subtle glass look.
+
+## Processes
+
+### GitHub Push Process
+
+1. Confirm branch `main`.
+2. Stage: `git add .`
 3. Commit: `git commit -m "Describe changes"`
 4. Push: `git push`
 
-Cursor, please follow this process when I ask you to push code to GitHub.
+### Error Fixing
 
-
-## Error Fixing
 1. Explain the error in simple terms.
 2. Suggest likely causes.
-3. Show minimal, clean fix.
+3. Show a **minimal, clean fix**.
 
-# Environment Variables
-(none for now)
+## Analytics & SEO
 
-# File Structure
+* Use Umami for custom events (suggested): `compare_opened`, `compare_added_service`, `compare_view`, `outbound_click`, `questionnaire_start`, `questionnaire_complete`, `tip_click`.
+* Keep unique titles/descriptions/OG tags; maintain canonical links; no duplicate content.
 
-# Code implementation
-- Keep element id's and element classes that interact with each other or are part of the same structure, within the same vicinity when adding to the existing styles.css file. For example: .menu.active should be near .hamburger because .menu.active is part of the .hamburger container. 
-- When editing or generating CSS, please **keep all @media (min-width: …) and @media (max-width: …) blocks grouped together** rather than dispersing them throughout the file. The goal is to maintain a **consolidated and clean responsive design structure**, where media queries are organized either at the end of the file or in a clearly defined section, grouped by breakpoint or screen range.
 
-This helps with maintainability and clarity in the stylesheet.
+---
 
+**When in doubt:** keep it simple, fast, and Bitcoin‑only. Ensure any suggestion respects privacy and sovereignty.
