Static brand pages in services folder with one source of truth

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -4,7 +4,7 @@
 
 ## Project Overview
 
-* **Name:** Buoy Bitcoin — static HTML site that helps newcomers **compare Bitcoin-only services** by features, ease of use, USP, country availability, custody model, and Lightning support.
+* **Name:** Buoy Bitcoin — brand new static HTML site that helps newcomers **compare Bitcoin-only services** by features, ease of use, USP, country availability, custody model, and Lightning support.
 * **Outcome Goal:** **10,000 monthly visitors** (validate demand for curated, Bitcoin-only directories + guides).
 
 ## Vision & Mission
