FAQs, schemas, updated htaccess for launch

--- a/.cursor-rules.md
+++ b/.cursor-rules.md
@@ -46,6 +46,44 @@ Explain like a **senior front‑end dev** guiding a **complete beginner**: patie
 * Assets: `styles.css`, `script.js`, `compare.js`, `questionnaire.js`.
 * Data: `services.json` (catalog), `countries.json` (ISO codes + regions).
 
+## SSG & baked tables (single-service pages)
+What’s baked: On single-service pages (e.g. strike.html) we inject the full comparison table at build time between the BUILD markers:
+
+<!-- BUILD:START -->
+<div id="comparison-container">
+  <div class="logo-row-sticky">
+    <div class="feature-values logo-row" id="logo-row-container"></div>
+  </div>
+  <div id="comparison-table-wrapper"></div>
+</div>
+<!-- BUILD:END -->
+
+
+The build step writes a complete .comparison-table inside #comparison-table-wrapper. Keep classes/structure identical to the client renderer so CSS stays consistent (e.g. .comparison-table, .feature-row.{key}, .feature-values, .feature-value[data-service="slug"], label + optional .sublabel).
+
+Client behavior: compare.js must detect a baked table and skip full re-render; after geolocation it hydrates only the features row (per user country/region) by replacing the contents of .feature-row.features .feature-value[data-service="…"]. Reuse getFeaturesForCountry(...) and the existing region mapping logic. Do not touch other rows (fees, profile, etc.). Keep the ratings modal wiring working on baked pages.
+
+Baked detection rule (contract):
+const baked = !!document.querySelector('#comparison-table-wrapper .comparison-table');
+// If baked: skip building rows; hydrate features row only after country is known.
+
+(If you add data-baked="1" to .comparison-table later, keep the query above working.)
+
+Row/label parity: The baked HTML must use the same row keys the client expects (examples you’ll see in the current renderer: features, fees, user_experience, interface, app_ratings, support, profile, description, founded_in, website, availability, etc.). Prefer pulling the row config from a single shared module (e.g. shared/rows.mjs) that both the SSG renderer and compare.js import to avoid drift.
+
+Fees renderer contract: services.json supports:
+string
+object with intro
+object with intro, tiers[] ({ range, fee }), optional notes
+The baked renderer must mirror the client’s renderFees(...) output so pages look the same.
+
+Descriptions: Normalize "\\n\\n" to real paragraphs in baked output (wrap in <p>). (Client already does collapsible descriptions; preserve the same markup hooks/classes.)
+Alternatives block (single-service pages): If present below the table, filter alternatives by user location, sort by highest app_ratings, and cap visible items to 5.
+
+Paths: Use root-absolute asset/data paths in baked HTML (e.g. /images/..., /data/services.json) to avoid relative path issues across nested pages.
+
+Service page globals: Single-service pages set window.__BUOY_SERVICE__ and window.__BUOY_SLUG__; if you need the current service in scripts, read those first.
+
 ## Data Model & Behavior
 
 * **`services.json` schema (keep stable):**
@@ -57,11 +95,12 @@ Explain like a **senior front‑end dev** guiding a **complete beginner**: patie
   * `features` grouped by region code; each item: `{ text, status: positive|negative|neutral }`.
   * Optional: ratings, KYC requirements, Lightning support, fees (when known).
 * **Country/Region filtering:** use `countries.json` and region mappings; honor `WW`.
-* **Compare rules:**
 
+* **Compare rules:**
   * Compare **only within the same category**.
   * **Mobile:** max 2 services; **Desktop:** max 3 services.
   * Side‑by‑side shows description, custody, platforms, notable features (per region), links.
+
 * **Questionnaire:** lightweight; maps answers (e.g., KYC preference, Lightning, experience) to filters → deep‑link to `compare.html?category=...&services=...`.
 
 ## Code Style & CSS Rules
